--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   ],
   "author": "",
   "devDependencies": {
-    "eslint": "^8.55.0",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "moleculer-repl": "^0.7.4"
   },
   "dependencies": {
     "@moleculer/lab": "^0.6.4",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "busboy": "^1.6.0",
-    "config": "^3.3.9",
+    "config": "^3.3.11",
     "ecpair": "^2.1.0",
     "ioredis": "^5.3.2",
     "json-socket": "^0.3.0",
@@ -48,17 +48,15 @@
     "moleculer-db-adapter-mongo": "^0.4.19",
     "moleculer-io": "^2.2.0",
     "moleculer-web": "^0.10.7",
-    "moment": "^2.29.4",
-    "mongodb": "^6.3.0",
+    "moment": "^2.30.1",
+    "mongodb": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "redlock": "^4.2.0",
     "socket.io-redis": "^6.1.1",
-    "sqlite3": "^5.1.6",
-    "stellar-base": "^10.0.0",
+    "sqlite3": "^5.1.7",
     "throttled-queue": "^2.1.4",
-    "uuid": "^9.0.1",
-    "ws": "^8.15.1"
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">= 18.x.x"
