--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "LAB_PORT=3211 NODE_ID=development-adm moleculer-runner --repl --hot services/*.service.js",
     "dev-partials": "NODE_ID=dev-ip_info moleculer-runner --repl --hot services/_partial/*.service.js",
     "dev-screen": "NODE_ID=dev-screen moleculer-runner --repl --hot services/screen/*.service.js",
+    "dev-services": "NODE_ID=dev-screen moleculer-runner --repl --hot services/package/*.service.js services/serialno/*.service.js",
     "dev-admin": "NODE_ID=dev-admin moleculer-runner --repl --hot services/admin/*.service.js",
     "dev-ipinfo": "NODE_ID=dev-ip_info moleculer-runner --repl --hot services/_partial/ip_location.service.js",
     "dev-countries": "NODE_ID=dev-country moleculer-runner --repl --hot services/_partial/country.service.js services/_partial/country_holiday.service.js",
