added email service core

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev-partials": "NODE_ID=dev-ip_info moleculer-runner --repl --hot services/_partial/*.service.js",
     "dev-screen": "NODE_ID=dev-screen moleculer-runner --repl --hot services/screen/*.service.js",
     "dev-services": "NODE_ID=dev-services moleculer-runner --repl --hot services/package/*.service.js",
+    "dev-email": "NODE_ID=dev-email moleculer-runner --repl --hot services/email/*.service.js",
     "dev-source": "NODE_ID=dev-source moleculer-runner --repl --hot services/source/*.service.js",
     "dev-admin": "NODE_ID=dev-admin moleculer-runner --repl --hot services/admin/*.service.js",
     "dev-ipinfo": "NODE_ID=dev-ip_info moleculer-runner --repl --hot services/_partial/ip_location.service.js",
@@ -55,6 +56,7 @@
     "mongodb": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "postmark": "^4.0.2",
     "redlock": "^4.2.0",
     "socket.io-redis": "^6.1.1",
     "sqlite3": "^5.1.7",
