--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   },
   "dependencies": {
     "@moleculer/lab": "^0.6.4",
-    "@numairawan/video-duration": "^1.0.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -45,6 +44,7 @@
     "busboy": "^1.6.0",
     "config": "^3.3.11",
     "ecpair": "^2.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "ioredis": "^5.4.1",
     "json-socket": "^0.3.0",
     "jsonwebtoken": "^9.0.2",
