--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Digital Signage Api",
   "scripts": {
     "dev": "LAB_PORT=3211 NODE_ID=dev-apibase moleculer-runner --repl --hot services/*.service.js",
-    "dev-partials": "NODE_ID=dev-ip_info moleculer-runner --repl --hot services/_partial/*.service.js",
+    "dev-partials": "NODE_ID=dev-partials moleculer-runner --repl --hot services/_partial/*.service.js",
     "dev-screen": "NODE_ID=dev-screen moleculer-runner --repl --hot services/screen/*.service.js",
     "dev-package": "NODE_ID=dev-package moleculer-runner --repl --hot services/package/*.service.js",
     "dev-email": "NODE_ID=dev-email moleculer-runner --repl --hot services/email/*.service.js",
