added instagram worker

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev-package": "NODE_ID=dev-package moleculer-runner --repl --hot services/package/*.service.js",
     "dev-email": "NODE_ID=dev-email moleculer-runner --repl --hot services/email/*.service.js",
     "dev-source": "NODE_ID=dev-source moleculer-runner --repl --hot services/source/*.service.js",
-    "dev-widget": "NODE_ID=dev-widget moleculer-runner --repl --hot services/widget/*.service.js services/widget/**/*.service.js",
+    "dev-widget": "NODE_ID=dev-widget moleculer-runner --repl --hot services/widget/*.service.js services/widget/**/*.service.js services/widget/**/**/*.worker.js",
     "dev-admin": "NODE_ID=dev-admin moleculer-runner --repl --hot services/admin/*.service.js",
     "dev-ipinfo": "NODE_ID=dev-ip_info moleculer-runner --repl --hot services/_partial/ip_location.service.js",
     "dev-countries": "NODE_ID=dev-country moleculer-runner --repl --hot services/_partial/country.service.js services/_partial/country_holiday.service.js",
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@moleculer/lab": "^0.6.4",
+    "@r2d2bzh/moleculer-cron": "^0.1.4",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -58,6 +59,7 @@
     "mongodb": "^6.6.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "poolifier": "^4.0.17",
     "postmark": "^4.0.2",
     "redlock": "^4.2.0",
     "socket.io-redis": "^6.1.1",
