--- a/docker-compose.env
+++ b/docker-compose.env
@@ -7,4 +7,4 @@ TRANSPORTER=redis://redis:6379
 
 CACHER=redis://redis:6379
 
-MONGO_URI=mongodb://mongo/user-service
+MONGO_URI=mongodb://mongo/signage_api
