--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "LAB_PORT=3211 NODE_ID=dev-apibase moleculer-runner --repl --hot services/*.service.js",
     "dev-partials": "NODE_ID=dev-partials moleculer-runner --repl --hot services/_partial/*.service.js",
+    "dev-logs": "NODE_ID=dev-logs moleculer-runner --repl --hot services/log/*.service.js",
     "dev-screen": "NODE_ID=dev-screen moleculer-runner --repl --hot services/screen/*.service.js",
     "dev-package": "NODE_ID=dev-package moleculer-runner --repl --hot services/package/*.service.js",
     "dev-email": "NODE_ID=dev-email moleculer-runner --repl --hot services/email/*.service.js",
