--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "mongodb": "^6.6.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.14",
     "poolifier": "^4.0.17",
-    "postmark": "^4.0.2",
     "redlock": "^4.2.0",
     "socket.io-redis": "^6.1.1",
     "sqlite3": "^5.1.7",
