change profile depends on user needings

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev-email": "NODE_ID=dev-email moleculer-runner --repl --hot services/email/*.service.js",
     "dev-source": "NODE_ID=dev-source moleculer-runner --repl --hot services/source/*.service.js",
     "dev-widget": "NODE_ID=dev-widget moleculer-runner --repl --hot services/widget/*.service.js services/widget/**/*.service.js services/widget/**/**/*.worker.js",
+    "dev-payment": "NODE_ID=dev-payment moleculer-runner --repl --hot services/payment/*.service.js services/payment/**/*.service.js services/payment/**/**/*.worker.js",
     "dev-admin": "NODE_ID=dev-admin moleculer-runner --repl --hot services/admin/*.service.js",
     "dev-ipinfo": "NODE_ID=dev-ip_info moleculer-runner --repl --hot services/_partial/ip_location.service.js",
     "dev-countries": "NODE_ID=dev-country moleculer-runner --repl --hot services/_partial/country.service.js services/_partial/country_holiday.service.js",
@@ -48,6 +49,7 @@
     "ecpair": "^2.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "ioredis": "^5.4.1",
+    "iyzipay": "^2.0.61",
     "json-socket": "^0.3.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -64,6 +66,7 @@
     "nodemailer": "^6.9.14",
     "poolifier": "^4.0.17",
     "redlock": "^4.2.0",
+    "slugify": "^1.6.6",
     "socket.io-redis": "^6.1.1",
     "sqlite3": "^5.1.7",
     "throttled-queue": "^2.1.4",
